Simplified and uniformized the SPA section formats. Inserted report section and link to report 1. Identified report 1 as such in it and dated it. Overrode Bootstrap policy of making columns 100% wide on small displays. Added symlink from erroneously disclosed URL of report 1 to correct URL.

--- a/style.css
+++ b/style.css
@@ -2,6 +2,18 @@
   .col.display-1 {
     font-size: 10vw;
   }
+  .col-sm-1 {
+    width: 8.333333%!important;
+  }
+  .col-sm-2 {
+    width: 16.666667%!important;
+  }
+  .col-sm-8 {
+    width: 66.666667%!important;
+  }
+  .col-sm-10 {
+    width: 83.333333%!important;
+  }
   html {
     font-size: 10px;
   }
@@ -25,7 +37,7 @@
     font-size: 6rem;
   }
   html {
-    font-size: 18px;
+    font-size: 1.2rem;
   }
   section {
     padding-top: 9rem;
@@ -58,9 +70,6 @@ body {
   font-weight: bold;
   color: yellow!important;
 }
-#contact {
-  background-color: #f6f6f6;
-}
 .donot-text {
   color: 111;
 }
@@ -84,11 +93,6 @@ body {
 }
 figure {
   align-items: center;
-}
-#free > div {
-  border: solid gray 1rem;
-  padding-top: 0.5rem;
-  background-color: #f0f6ffzz;
 }
 .hidden {
   display: none;
